fix team text alignment

--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,9 @@
-/* LOGO */
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.17;
+  line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
