--- a/css/team.css
+++ b/css/team.css
@@ -25,6 +25,7 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
 }
 
 
@@ -33,5 +34,6 @@
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
